Add support for GPtrArrays

Using code that already exists for GArray, implement marshalling
for GPtrArrays. Includes some general cleanup of array code.

https://bugzilla.gnome.org/show_bug.cgi?id=652753